# qbatch

./: .gitignore  README.md  processor.py  processor_requirements.txt  pyproject.toml  quick_batch.yaml
.github/workflows/: python-app.yml
controller_app/: run.py
controller_app/controller_app/: __init__.py
examples/capitalize_every_other_character/: quick_batch_local.yaml
examples/speech_to_text/: Dockerfile  quick_batch_local.yaml
notebooks/: testing.ipynb
processor_app/: requirements.txt
qbatch/utilities/: __init__.py  manage_images.py  manage_services.py
queue_app/: Dockerfile  requirements.txt
queue_app/queue_app/: __init__.py  apis.py  queues_init.py
quick_batch/: main.py
quick_batch/controller_app/: Dockerfile  requirements.txt
quick_batch/processor_app/: Dockerfile  processor_requirements.txt
quick_batch/queue_app/: Dockerfile  run.py
quick_batch/utilities/: __init__.py  manage_containers.py  manage_images.py  manage_networks.py  manage_queue.py  manage_requirements.py  manage_services.py  manage_setup.py  manage_swarm.py  param_checks.py  progress_logger.py
quickbatch/utilities/: __init__.py  manage_images.py  manage_networks.py  manage_services.py
tests/: test_qbatch.py  test_quick_batch.py  test_quickbatch.py
tests/test_configs/: test_qbatch_github.yaml  test_qbatch_local.yaml  test_quick_batch.yaml  test_quick_batch_github.yaml  test_quick_batch_local.yaml  test_quickbatch_github.yaml  test_quickbatch_local.yaml
tests/test_processors/: process_text_files.py  processor.py
tests/test_requirements/: requirements.txt
(+48 files in other folders)
